apps/nut-exporter/install/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nut-exporter
  namespace: nut-exporter
  labels:
    app: nut-exporter
    app.kubernetes.io/name: nut-exporter
    app.kubernetes.io/part-of: nut-exporter
    app.kubernetes.io/instance: nut-exporter
    app.kubernetes.io/component: nut-exporter
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nut-exporter
  template:
    metadata:
      labels:
        app: nut-exporter
        app.kubernetes.io/name: nut-exporter
        app.kubernetes.io/part-of: nut-exporter
        app.kubernetes.io/instance: nut-exporter
        app.kubernetes.io/component: nut-exporter
    spec:
      containers:
        - name: nut-exporter
          image: druggeri/nut_exporter:3.3.0
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false               # prevent acting like host root
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 9199
              name: http
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9199
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9199
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000            # hardcode group to non-root if not set in Dockerfile
        runAsUser: 1000          # hardcode user to non-root if not set in Dockerfile
        runAsGroup: 1000         # hardcode group to non-root if not set in Dockerfile
        runAsNonRoot: true       # hardcode to non-root. Redundant to above if Dockerfile is set USER 1000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nut-exporter
              topologyKey: kubernetes.io/hostname
