apps/nut-exporter/install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nut-exporter
  namespace: nut-exporter
  labels:
    app: nut-exporter
    app.kubernetes.io/name: nut-exporter
    app.kubernetes.io/part-of: nut-exporter
    app.kubernetes.io/instance: nut-exporter
    app.kubernetes.io/component: nut-exporter
spec:
  selector:
    app: nut-exporter
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - name: http
      protocol: TCP
      port: 9199
      targetPort: http
  type: ClusterIP
