apps/nut-exporter/install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nut-exporter
  namespace: nut-exporter
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nut-exporter.local.asztalos.net`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      services:
        - name: nut-exporter
          namespace: nut-exporter
          port: 9199
  tls:
    secretName: local-asztalos-net-tls
